--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -65,7 +65,7 @@
     "react-apollo": "^2.0.4",
     "react-debounce-input": "^3.1.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "react-navigation": "^1.0.0-beta.27",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.6",
     "react-stripe-elements": "^1.2.1",
     "redux": "^3.7.2",
